# pyval

./: CHANGELOG.md  Cargo.toml  DEEP_REVIEW.md  FINAL_SUMMARY.md  LICENSE  Makefile  OPTIMIZATION_REPORT.md  PROGRESS.md  README.md  STATUS_AND_PLAN.md  WORKFLOW.md  baseline_benchmark.py  baseline_results.json  performance_results.json  pyproject.toml  requirments.md
.github/workflows/: benchmark.yml  ci.yml  release.yml  test.yml
benches/: benchmarks.rs
crates/pyval-core/: Cargo.toml
crates/pyval-core/src/: domain.rs  error.rs  fastpath.rs  lazy.rs  lib.rs  simd.rs  syntax.rs  validator.rs
docs/: README.md  api.md  architecture.md  changelog.md  contributing.md  installation.md  quickstart.md
docs/development/: contributing.md
docs/guides/: quickstart.md
src/: approximate.rs  error.rs  fastpath.rs  jit.rs  lazy.rs  lib.rs  lookup.rs  prefetch.rs  simd.rs  syntax.rs  validator.rs  vectorized.rs
test_data/: emails.py
tests/: test_performance.py
wrappers/python/: Cargo.toml  MANIFEST.in  README.md  pyproject.toml
wrappers/python/emailval/: __init__.py
wrappers/python/pyval/: __init__.py
wrappers/python/src/: lib.rs
wrappers/python/tests/: test_api_compat.py  test_performance.py
