[package]
name = "pyval"
version = "0.1.0"
edition = "2021"
description = "Blazingly fast email validator for Python"
license = "MIT"

[lib]
name = "pyval"
crate-type = ["cdylib"]

[dependencies]
pyo3 = { version = "0.22", features = ["extension-module"] }
idna = "1.0"           # Internationalized domain names
unicode-normalization = "0.1"
once_cell = "1.19"     # Lazy statics
regex = "1.10"         # For complex patterns (use sparingly)
thiserror = "1.0"

# Optional DNS checking
trust-dns-resolver = { version = "0.23", optional = true }

[features]
default = []
deliverability = ["trust-dns-resolver"]

[profile.release]
lto = "fat"
codegen-units = 1
panic = "abort"
strip = true
opt-level = 3
