[package]
name = "pyval-core"
version = "0.2.1"
edition = "2021"
description = "Core email validation library for Rust"
license = "MIT"
repository = "https://github.com/aibrushcomputer/pyval"
keywords = ["email", "validation", "parser", "rfc5322"]
categories = ["email", "parsing"]

[dependencies]
pyo3 = { version = "0.23", features = ["extension-module"] }
idna = "1.0"
unicode-normalization = "0.1"
thiserror = "1.0"

[dev-dependencies]
